# MPI-Resistance

./: .gitignore  CMakeLists.txt  README.md  log.txt  main.c  main.cc  main.cpp  pass.txt  problem.txt  solution.txt
src/: ack_queue.cc  ack_queue.h  backend.c  backend.cc  backend.h  comm.cc  comm.cpp  comm.h  common.h  config.c  config.cc  config.h  interface.c  interface.h  message.cc  message.cpp  message.h  node.c  node.cc  node.h  utils.c  utils.cc  utils.h
